--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.7",
     "tailwindcss": "^4",
     "typescript": "^5.9.2"
   }
